--- a/NeaProject/Pages/Index.razor.css
+++ b/NeaProject/Pages/Index.razor.css
@@ -1,4 +1,10 @@
-﻿.center {
+﻿.arrow-key {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+}
+
+.center {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
@@ -21,8 +27,10 @@
 .massive-invisible-button {
     width: 100%;
     height: 100%;
-    background-color: #595f;
-    box-sizing: border-box;
+    color: #fff;
+    border: none;
+    background-color: #222;
+    box-sizing: border-box;  
 }
 
 .table-center {
@@ -32,10 +40,11 @@
 }
 
 table, th, td {
-    border: 1px solid white;
+    border: none;
     border-collapse: collapse;
+    text-align: center;
 }
 
 th, td {
-    background-color: #96D4D4;
+    background-color: #222;
 }
